<resources>
    <string name="app_name">Film Library</string>
    <string name="text_correct_way">Open Second Activity</string>
    <string name="open_google">Open Google</string>
    <string name="phonenumber">Call 1234</string>
    <string name="open_gmail">Open Gmail</string>
    <string name="profile">Profile</string>

    <!--Error-->

    <string name="empty_user">User cannot be empty!</string>
    <string name="no_connectivity">No Internet Connection</string>

    <!--App-->

    <string name="username">Username</string>
    <string name="enter_username">username...</string>
    <string name="email">Email</string>
    <string name="enter_email">email...</string>
    <string name="password">Password</string>
    <string name="enter_password">password...</string>

    <!--Gender & Age | Save & Delete-->
    <string name="gender">Gender:</string>
    <string name="age">Birthday:</string>
    <string name="age_two">Birthday...</string>
    <string name="Save">Save</string>
    <string name="delete">Delete</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <!-- Login, Cancel & Register-->
    <string name="login">login</string>
    <string name="cancel">cancel</string>
    <string name="register">register</string>

    <!--List Practice-->
    <string name="sherlock">The Adventures of Sherlock Holmes</string>
    <string name="alienist">The Alienist</string>
    <string name="tintin">The Adventures of Tintin</string>

    <!--Dialog Messages-->
    <string name="profile_dialog_delete_confirmation">Confirmation</string>
    <string name="profile_dialog_delete">Are you sure you want to delete this user?</string>
    <string name="profile_dialog_yes">Yes</string>
    <string name="profile_dialog_no">No</string>
    <string name="profile_dialog_cancel">cancel</string>
    <string name="profile_dialog_deletinguser">Deleting User…</string>

    <!--Error Saving User-->
    <string name="profile_sql_exception">Error: Invalid Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmenta_a">FRAGMENT A</string>
    <string name="fragmenta_b">FRAGMENT B</string>
    <string name="title_activity_fragment_test">FragmentTestActivity</string>
    <string name="action_settings">Settings</string>

    <!--Film Detail Text-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim
        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
        ex ea commodo consequat.</string>
    <string name="whatch_trailer">Whatch Trailer</string>
    <string name="sSite">https://www.youtube.com/watch?v=EQS7bRXrr5g</string>
    <string name="aSite">https://www.youtube.com/watch?v=YtzgFRBvRy8</string>
    <string name="tSite">https://www.youtube.com/watch?v=7NWtW699XME</string>

    <!--Login Preferences File-->
    <string name="login_preference_file">com.android.teaching.miprimeraapp.LOGIN_PREFERENCE_FILE</string>

    <!--Profile Preferences File-->
    <string name="profile_preferences_file">com.android.teaching.miprimeraapp.PROFILE_PREFERENCE_FILE</string>

    <!--Colors-->
    <string-array name="colors">
        <item>#086788</item>
        <item>#07A0C3</item>
        <item>#FFFFFF</item>
        <item>#092327</item>
        <item>#DD1C1A</item>
        <item>#84DCC6</item>
        <item>#6D5959</item>
        <item>#D6EDFF</item>
        <item>#ACD7EC</item>
        <item>#8B95C9</item>
        <item>#E5D9F2</item>
        <item>#F5EFFF</item>
        <item>#CDC1FF</item>
        <item>#A594F9</item>
        <item>#7371FC</item>

    </string-array>

    <string name="sea_blue">#086788</string>
    <string name="blue_green">#07A0C3</string>
    <string name="white">#FFFFFF</string>
    <string name="dark_jungle_green">#092327</string>
    <string name="maximum_red">#DD1C1A</string>

    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop Music</string>

</resources>
