<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/asafes_textStyle"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/user"
        style="@style/input_type"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/textView2"
        android:text="@string/email"
        style="@style/asafes_textStyle"/>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        style="@style/input_type"/>

    <TextView
        android:id="@+id/textView3"
        android:text="@string/password"
        style="@style/asafes_textStyle"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        style="@style/input_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            style="@style/asafes_textStyle"/>

        <EditText
            android:id="@+id/age"
            style="@style/asafes_textStyle"
            android:inputType="number"
            android:hint="@string/age_two"/>



        <!--RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="1dp"
            android:background="@color/colorBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>

        </RadioGroup-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_margin="10dp">

        <Button
            style="@style/my_button"
            android:text="@string/Save"
            android:onClick="saveData"/>

        <Button
            style="@style/my_button"
            android:text="@string/delete"
            android:onClick="deleteUser"/>

    </LinearLayout>


</LinearLayout>