<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/username"
        style="@style/asafes_textStyle"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/user"
        style="@style/input_type"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:layout_below="@+id/username"/>

    <TextView
        android:id="@+id/pass"
        android:text="@string/password"
        style="@style/asafes_textStyle"
        android:layout_below="@+id/user"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        style="@style/input_type"
        android:layout_below="@id/pass"/>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:onClick="Login"
        android:layout_below="@id/password"
        style="@style/L_C_buttons" />

    <Button
        android:id="@+id/cancel"
        style="@style/L_C_buttons"
        android:text="@string/cancel"
        android:onClick="Cancel"
        android:layout_alignBottom="@id/login"
        android:layout_toEndOf="@+id/login"/>

    <!--android:layout_alignParentStart="true"-->
    <Button
        android:id="@+id/register"
        style="@style/my_button"
        android:layout_alignParentBottom="true"
        android:onClick="register"
        android:text="@string/register"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_above="@id/register"
        android:src="@drawable/mes_aniversario" />

</RelativeLayout>