<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:gravity="bottom|center_horizontal"

    tools:context=".MainActivity">

    <Button
        android:onClick="opgl"
        android:text="@string/open_google"
        style="@style/my_button" />

    <Button
        android:onClick="call"
        android:text="@string/phonenumber"
        style="@style/my_button"/>

    <Button
        style="@style/my_button"
        android:onClick="onClick"
        android:text="@string/text_correct_way" />
    
    <Button
        style="@style/my_button"
        android:onClick="oppf"/>

</LinearLayout>